Add Test Playground

--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,6 @@ trim_trailing_whitespace = true
 # These should work with IntelliJ >= 2021.1 (https://youtrack.jetbrains.com/issue/IDEA-225733)
 ij_java_class_count_to_use_import_on_demand = 999
 ij_java_names_count_to_use_import_on_demand = 999
+
+[*.yml]
+indent_size = 2
